--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 		<script type="text/javascript" src = "mathutil.js"></script>
 		<script type="text/javascript" src = "matrix.js"></script>
 		<script type="text/javascript" src = "vector.js"></script>
+        <script type="text/javascript" src = "matrixutil.js"></script>
 	</head>
 </html>
