Added methods for creating homogeneous transformation matrices. Added method for drawing a vector.

--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
 		<script type="text/javascript" src = "vector.js"></script>
         <script type="text/javascript" src = "matrixutil.js"></script>
 	</head>
+    <body>
+        <canvas id="canvas" width = "500" height = "500"></canvas>
+    </body>
 </html>
